@@ -8,7 +8,9 @@ Description: What the package does (one paragraph).
 Depends:
     R (>= 3.3.0)
 Imports:
-    devtools    
+    devtools 
+Remotes:
+    Maritimes/Mar.utils
 License: MIT
 Encoding: UTF-8
 LazyData: true
